--- a/.github/workflows/test-jetstream.yml
+++ b/.github/workflows/test-jetstream.yml
@@ -57,7 +57,7 @@ jobs:
           php artisan ddd:install
 
       - name: Execute tests
-        run: vendor/bin/phpunit --verbose
+        run: vendor/bin/phpunit
         env:
           DB_CONNECTION: sqlite
           DB_DATABASE: ":memory:"
